# selenium-wire

./: .gitignore  README.rst  pyproject.toml  setup.py
seleniumwire/: har.py  inspect.py  webdriver.py
seleniumwire/undetected_chromedriver/: __init__.py  v2.py
tests/: utils.py
tests/end2end/: test_end2end.py
tests/seleniumwire/: test_utils.py
