[tool.poetry]
name = "selenium-wire"
version = "5.1.0"
description = ""
authors = ["bissli <bissli@xyz.com>"]
readme = "README.rst"
packages = [{ include = "seleniumwire" }]

[tool.poetry.dependencies]
python = "^3.11"
blinker = "1.7.0" # 1.8.0+ breaks mitmproxy
brotli = "^1.1.0"
certifi = "^2024.2.2"
h2 = "^4.1.0"
hyperframe = "^6.0.1"
kaitaistruct = "^0.10"
pyasn1 = "^0.6.0"
pyparsing = "^3.1.2"
pysocks = "^1.7.1"
selenium = "*"
wsproto = "^1.2.0"
zstandard = "^0.22.0"
pyopenssl = ">=22.1"
smart-webdriver-manager = "*"
pydivert = { version = "^2.1.0", markers = "sys_platform == 'win32'" }

gunicorn = { version = "^21.2.0", optional = true }
coverage = { version = "^7.4.4", optional = true }
mitmproxy = { version = "^10.2.4", optional = true }
mypy = { version = "^1.9.0", optional = true }
pytest = { version = "^8.1.1", optional = true }
pytest-cov = { version = "^5.0.0", optional = true }
tox = { version = "^4.14.2", optional = true }
httpbin = { version = "^0.10.2", optional = true }

[tool.poetry.extras]
test = [
  "gunicorn",
  "coverage",
  "mitmproxy",
  "pytest",
  "pytest-cov",
  "tox",
  "httpbin",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
